--- a/3_Dokumentation/Handbuch/index.html
+++ b/3_Dokumentation/Handbuch/index.html
@@ -41,8 +41,70 @@ Schere Steın Papıer <br />
  <br />
  Mit dem Betätigen der 'Spiel'-Taste, kommt man in das Menü des Spiels. <br />
  <br />
+ <img src="./bilder/Start .jpg" width="800" height="500" border="0" alt="Start" style="margin:5px" align="left"> 
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ 
  Hier stehen dem Spieler verschiedene Modis zur Verfügung. <br />
  <br />
+ <img src="./bilder/menu.jpg" width="800" height="500" border="0" alt="Start" style="margin:5px" align="left"> 
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+ <br />
+
  Erst entscheidet man zwischen der Rundenanzahl. Hier wählt man zwischen Best of 3, Best of 5, Best of 7 aus. <br />
  <br />
  Best of 3: Derjenige, der aus 3 Spielen mehr Spiele für sich entscheiden kann, gewinnt. <br />
@@ -72,9 +134,13 @@ Schere Steın Papıer <br />
  <br />
 
  2: Mit Spock und Echse: Zusätlich zu dem klassischen 'Schere, Stein, Papier' kommt hier Spock und Echse dazu. <br />
+ <br />
  Hier gewinnt Stein gegen Echse, <br />
+ <br />
 Echse gegen Spock, Spock gegen Schere, Schere gegen Echse, <br />
+<br />
 Echse gegen Papier, Papier gegen Spock, <br />
+<br />
 Spock gegen Stein, Stein gegen Schere. <br />
 <br />
 <img src="./bilder/rock.jpg" width="150" height="150" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
@@ -97,21 +163,134 @@ Als Letztes wählt man die Anzahl der Spieler. <br />
 Hier kann man entweder das 'Spiel gegen Computer' oder das '2 Spieler' wählen. <br />
 <br />
 Spiel gegen Computer:	Hier wählt der Spieler eines der Elemente aus. Der Computer wählt zufällig auch eines der Elemente aus.<br />
+<br />
 						Dann kommt die Anzeige: 'Sie haben ... ausgewählt.' und 'Der Computer hat ... ausgewählt.'<br />. 
+						<br />
 						AUßerdem erscheint die Anzeige 'Du hast gewonnen :)', wenn der Spieler gewonnen hat oder die Anzeige 'Unentschieden', <br />
+						<br />
 						wenn beide dasselbe Element gewählt haben oder die Anzeige 'Du hast verloren :c', wenn der Computer diese Runde gewonnen hat.<br />
 						<br />
 2 Spieler:	Hier wählen zwei Spieler gleichzeitig durch verdecken deren Element und im nächsten Fenster entscheidet sich wer die Runde gewonnen hat. <br />
+<br />
+<img src="./bilder/menu ausgewählt.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
+<img src="./bilder/menu auswahl 2.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
+<img src="./bilder/menu auswahl 3.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
+<img src="./bilder/menu auswahl 4.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+
+Mit dem Betätigen des 'Start' Buttons beginnt das Spiel mit den vom Spieler ausgewählten Bedingungen. <br />
+<br />
+Im Spiel wählt man zwischen den Elementen und klickt auf das zugehörige Button. <br />
+<br />
+<img src="./bilder/rock paper scissors.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
+<img src="./bilder/rock paper scissors lizard spock.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+
+Nach Rundenende erscheint das Ergebnis. <br />
+<br />
+Die Anzeige 'Du hast das Spiel gewonnen' erscheint wenn der Spieler gewonnen, <br />
+<br />
+'Du hast das Spiel verloren', wenn der Spieler verloren hat. <br />
+<br />
+<img src="./bilder/spiel gewonnen.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
+<img src="./bilder/spiel verloren.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+
+Nach erfolgreichem Abschluss des Spiels besteht die Möglichkeit erneut zu spielen, <br />
+<br />
+zurück ins Menü zu gehen oder die Highscoreliste anzuschauen. . <br />
+<br />
+Der Button 'Play again' steht für ein erneutes Spiel, <br />
+<br />
+'Back to Title' steht für das Zurückgehen ins Menü, <br />
+<br />
+und der Button 'Highscore' steht für die Highscoreliste. <br />
+<br />
+<figure>
+	<img src="bilder/Highscore Liste.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
+	<figcaption>Highscoreliste</figcaption>
+</figure>
+figure {
+	text-align: center; 
+  }
+figcaption {
+	display: inline-block; 
+	text-align: left;
+  }
 
 
 
 
 
 
-
-						. <br />
-... <br />
-Anschließend klickt der Spieler auf Start und das Spielt beginnt mit den vom Spieler ausgewählten Bedingungen. <br />
-Nach erfolgreichem Abschluss des Spiels besteht die Möglichkeit erneut zu spielen ODER das Spiel zu verlassen. <br />
 </body>
 </html>
