fettgedruckt und unterstrichen check

--- a/3_Dokumentation/Handbuch/index.html
+++ b/3_Dokumentation/Handbuch/index.html
@@ -26,7 +26,13 @@
 	</main>
 	<footer></footer>
 
-Schere Steın Papıer <br /> 
+<br />
+
+<br />
+
+<br />
+
+<b> <u> <h1> Schere Stein Papier </h1> </u> </b> <br /> 
 
 <br />
 
@@ -34,12 +40,13 @@ Schere Steın Papıer <br />
 
 <br />
 
- Altersempfehlung 5-99 <br />
- <br />
+<b> Altersempfehlung: </b> 5-99 <br />
+ 
+<br />
 
- Vorraussetzungen: PC/Laptop <br />
+ <b> Vorraussetzungen: </b> PC/Laptop <br />
  <br />
- Mit dem Betätigen der 'Spiel'-Taste, kommt man in das Menü des Spiels. <br />
+ Mit dem Betätigen der  <b> 'Spiel' </b> -Taste, kommt man in das Menü des Spiels. <br />
  <br />
  <img src="./bilder/Start .jpg" width="800" height="500" border="0" alt="Start" style="margin:5px" align="left"> 
  <br />
@@ -105,17 +112,17 @@ Schere Steın Papıer <br />
  <br />
  <br />
 
- Erst entscheidet man zwischen der Rundenanzahl. Hier wählt man zwischen Best of 3, Best of 5, Best of 7 aus. <br />
+ Erst entscheidet man zwischen der Rundenanzahl. Hier wählt man zwischen <b> Best of 3, Best of 5, Best of 7  </b> aus. <br />
  <br />
- Best of 3: Derjenige, der aus 3 Spielen mehr Spiele für sich entscheiden kann, gewinnt. <br />
+ <b> Best of 3: </b> Derjenige, der aus 3 Spielen mehr Spiele für sich entscheiden kann, gewinnt. <br />
  <br />
- Best of 5: Derjenige, der aus 5 Spielen mehr Spiele für sich entscheiden kann, gewinnt. <br />
+ <b> Best of 5: </b> Derjenige, der aus 5 Spielen mehr Spiele für sich entscheiden kann, gewinnt. <br />
  <br />
- Best of 7: Derjenige, der aus 7 Spielen mehr Spiele für sich entscheiden kann, gewinnt. <br />
+ <b> Best of 7: </b> Derjenige, der aus 7 Spielen mehr Spiele für sich entscheiden kann, gewinnt. <br />
  <br />
- Als Nächstes wird der Modus ausgesucht. Hier kann man entweder den 'Normalen Modus' oder 'Mit Spock und Echse' wählen.<br />
+ Als Nächstes wird der Modus ausgesucht. Hier kann man entweder den <b> 'Normalen Modus' </b> oder <b> 'Mit Spock und Echse' </b> wählen.<br />
  <br />
- 1: Normaler Modus: Normales 'Schere, Stein, Papier', indem Schere gegen Papier, Stein gegen Schere und Papier gegen Stein gewinnt.<br />
+ <b> 1: Normaler Modus: </b> Normales 'Schere, Stein, Papier', indem Schere gegen Papier, Stein gegen Schere und Papier gegen Stein gewinnt.<br />
  <br />
  <img src="./bilder/schere-papier.jpg" width="150" height="150" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
  <img src="./bilder/schere-stein.jpg" width="150" height="150" border="0" alt="Schere Stein" style="margin:5px" align="left"> 
@@ -133,7 +140,7 @@ Schere Steın Papıer <br />
  <br />
  <br />
 
- 2: Mit Spock und Echse: Zusätlich zu dem klassischen 'Schere, Stein, Papier' kommt hier Spock und Echse dazu. <br />
+ <b> 2: Mit Spock und Echse: </b> Zusätlich zu dem klassischen 'Schere, Stein, Papier' kommt hier Spock und Echse dazu. <br />
  <br />
  Hier gewinnt Stein gegen Echse, <br />
  <br />
@@ -158,19 +165,19 @@ Spock gegen Stein, Stein gegen Schere. <br />
 <br />
 <br />
 <br />
-Als Letztes wählt man die Anzahl der Spieler. <br />
+Als Letztes wählt man die <b> Anzahl der Spieler </b>. <br />
 <br />
-Hier kann man entweder das 'Spiel gegen Computer' oder das '2 Spieler' wählen. <br />
+Hier kann man entweder das <b> 'Spiel gegen Computer' </b> oder das <b> '2 Spieler' </b> wählen. <br />
 <br />
-Spiel gegen Computer:	Hier wählt der Spieler eines der Elemente aus. Der Computer wählt zufällig auch eines der Elemente aus.<br />
+<b> Spiel gegen Computer: </b>	Hier wählt der Spieler eines der Elemente aus. Der Computer wählt zufällig auch eines der Elemente aus.<br />
 <br />
 						Dann kommt die Anzeige: 'Sie haben ... ausgewählt.' und 'Der Computer hat ... ausgewählt.'<br />. 
 						<br />
-						AUßerdem erscheint die Anzeige 'Du hast gewonnen :)', wenn der Spieler gewonnen hat oder die Anzeige 'Unentschieden', <br />
+						Außerdem erscheint die Anzeige 'Du hast gewonnen :)', wenn der Spieler gewonnen hat oder die Anzeige 'Unentschieden', <br />
 						<br />
 						wenn beide dasselbe Element gewählt haben oder die Anzeige 'Du hast verloren :c', wenn der Computer diese Runde gewonnen hat.<br />
 						<br />
-2 Spieler:	Hier wählen zwei Spieler gleichzeitig durch verdecken deren Element und im nächsten Fenster entscheidet sich wer die Runde gewonnen hat. <br />
+<b> 2 Spieler: </b> 	Hier wählen zwei Spieler gleichzeitig durch Verdecken deren Element und im nächsten Fenster entscheidet sich wer die Runde gewonnen hat. <br />
 <br />
 <img src="./bilder/menu ausgewählt.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
 <img src="./bilder/menu auswahl 2.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
@@ -213,7 +220,7 @@ Spiel gegen Computer:	Hier wählt der Spieler eines der Elemente aus. Der Comput
 <br />
 <br />
 
-Mit dem Betätigen des 'Start' Buttons beginnt das Spiel mit den vom Spieler ausgewählten Bedingungen. <br />
+Mit dem Betätigen des <b> 'Start' </b> Buttons beginnt das Spiel mit den vom Spieler ausgewählten Bedingungen. <br />
 <br />
 Im Spiel wählt man zwischen den Elementen und klickt auf das zugehörige Button. <br />
 <br />
@@ -240,9 +247,9 @@ Im Spiel wählt man zwischen den Elementen und klickt auf das zugehörige Button
 
 Nach Rundenende erscheint das Ergebnis. <br />
 <br />
-Die Anzeige 'Du hast das Spiel gewonnen' erscheint wenn der Spieler gewonnen, <br />
+Die Anzeige <b> 'Du hast das Spiel gewonnen' </b> erscheint wenn der Spieler gewonnen, <br />
 <br />
-'Du hast das Spiel verloren', wenn der Spieler verloren hat. <br />
+<b> 'Du hast das Spiel verloren' </b> , wenn der Spieler verloren hat. <br />
 <br />
 <img src="./bilder/spiel gewonnen.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
 <img src="./bilder/spiel verloren.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
@@ -265,27 +272,22 @@ Die Anzeige 'Du hast das Spiel gewonnen' erscheint wenn der Spieler gewonnen, <b
 <br />
 <br />
 
-Nach erfolgreichem Abschluss des Spiels besteht die Möglichkeit erneut zu spielen, <br />
+Nach erfolgreichem Abschluss des Spiels besteht die Möglichkeit <b> erneut zu spielen </b>, <br />
 <br />
-zurück ins Menü zu gehen oder die Highscoreliste anzuschauen. . <br />
+<b> zurück ins Menü zu gehen </b> oder <b> die Highscoreliste anzuschaue </b>. <br />
 <br />
-Der Button 'Play again' steht für ein erneutes Spiel, <br />
+Der Button <b> 'Play again' </b> steht für ein erneutes Spiel, <br />
 <br />
-'Back to Title' steht für das Zurückgehen ins Menü, <br />
+<b> 'Back to Title' </b> steht für das Zurückgehen ins Menü, <br />
 <br />
-und der Button 'Highscore' steht für die Highscoreliste. <br />
+und der Button <b> 'Highscore' </b> steht für die Highscoreliste. <br />
 <br />
 <figure>
-	<img src="bilder/Highscore Liste.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
-	<figcaption>Highscoreliste</figcaption>
+	<img src="bilder/Highscore Liste.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> <br />
+	<figcaption>
+		Highscoreliste
+	</figcaption>
 </figure>
-figure {
-	text-align: center; 
-  }
-figcaption {
-	display: inline-block; 
-	text-align: left;
-  }
 
 
 
