--- a/3_Dokumentation/Handbuch/index.html
+++ b/3_Dokumentation/Handbuch/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Benutzerhandbuch</title>
+	</head>
+	<body bgcolor="8C2CCB"></body>
 </head>
 <body>
 	<header>
@@ -121,6 +123,21 @@
  <b> Best of 7: </b> Derjenige, der aus 7 Spielen mehr Spiele für sich entscheiden kann, gewinnt. <br />
  <br />
  Als Nächstes wird der Modus ausgesucht. Hier kann man entweder den <b> 'Normalen Modus' </b> oder <b> 'Mit Spock und Echse' </b> wählen.<br />
+ <br/>
+ Es stehen somit insgesamt 3 beziehungsweise 5 Auswahlmöglichkeiten zur Verfügung: <br/>
+ <br/>
+ <table border="1" style="width:100%;">
+	<tr>
+		<td>Schere</td>
+		<td>Stein</td>
+	</tr>
+	<tr>
+		<td>Papier</td>
+		<td>Spock</td>
+	</tr>
+	<tr>
+		<td>Echse</td>
+</table>
  <br />
  <b> 1: Normaler Modus: </b> Normales 'Schere, Stein, Papier', indem Schere gegen Papier, Stein gegen Schere und Papier gegen Stein gewinnt.<br />
  <br />
