--- a/3_Dokumentation/Handbuch/index.html
+++ b/3_Dokumentation/Handbuch/index.html
@@ -262,11 +262,11 @@ Im Spiel wählt man zwischen den Elementen und klickt auf das zugehörige Button
 <br />
 <br />
 
-Nach Rundenende erscheint das Ergebnis. <br />
+Nach Rundenende können zwei folgende Szenarien geschehen: <br />
 <br />
-Die Anzeige <b> 'Du hast das Spiel gewonnen' </b> erscheint wenn der Spieler gewonnen, <br />
+1.) Die Anzeige <b> 'Du hast das Spiel gewonnen' </b> erscheint wenn der Spieler gewonnen, <br />
 <br />
-<b> 'Du hast das Spiel verloren' </b> , wenn der Spieler verloren hat. <br />
+<b> 2.) 'Du hast das Spiel verloren' </b> , wenn der Spieler verloren hat. <br />
 <br />
 <img src="./bilder/spiel gewonnen.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
 <img src="./bilder/spiel verloren.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
@@ -291,7 +291,7 @@ Die Anzeige <b> 'Du hast das Spiel gewonnen' </b> erscheint wenn der Spieler gew
 
 Nach erfolgreichem Abschluss des Spiels besteht die Möglichkeit <b> erneut zu spielen </b>, <br />
 <br />
-<b> zurück ins Menü zu gehen </b> oder <b> die Highscoreliste anzuschaue </b>. <br />
+<b> zurück ins Menü zu gehen </b> oder <b> die Highscoreliste anzuschauen.  <br />
 <br />
 Der Button <b> 'Play again' </b> steht für ein erneutes Spiel, <br />
 <br />
@@ -299,12 +299,21 @@ Der Button <b> 'Play again' </b> steht für ein erneutes Spiel, <br />
 <br />
 und der Button <b> 'Highscore' </b> steht für die Highscoreliste. <br />
 <br />
+Highscoreliste:
 <figure>
+	
 	<img src="bilder/Highscore Liste.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> <br />
 	<figcaption>
-		Highscoreliste
+		
 	</figcaption>
 </figure>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+Wir als Entwickler des Spiels wünschen ihnen viel Freude am Spielen!
 
 
 
@@ -313,3 +322,4 @@ und der Button <b> 'Highscore' </b> steht für die Highscoreliste. <br />
 
 </body>
 </html>
+
