--- a/3_Dokumentation/Handbuch/index.html
+++ b/3_Dokumentation/Handbuch/index.html
@@ -50,7 +50,7 @@
  <br />
  Mit dem Betätigen der  <b> 'Spiel' </b> -Taste, kommt man in das Menü des Spiels. <br />
  <br />
- <img src="./bilder/Start .jpg" width="800" height="500" border="0" alt="Start" style="margin:5px" align="left"> 
+ <img src="./bilder/willkommen zu schere stein papier neu.jpg" width="800" height="500" border="0" alt="Start" style="margin:5px" align="left"> 
  <br />
  <br />
  <br />
@@ -83,7 +83,7 @@
  
  Hier stehen dem Spieler verschiedene Modis zur Verfügung. <br />
  <br />
- <img src="./bilder/menu.jpg" width="800" height="500" border="0" alt="Start" style="margin:5px" align="left"> 
+ <img src="./bilder/MENÜ NEU.jpg" width="800" height="500" border="0" alt="Start" style="margin:5px" align="left"> 
  <br />
  <br />
  <br />
@@ -196,10 +196,10 @@ Hier kann man entweder das <b> 'Spiel gegen Computer' </b> oder das <b> '2 Spiel
 						<br />
 <b> 2 Spieler: </b> 	Hier wählen zwei Spieler gleichzeitig durch Verdecken deren Element und im nächsten Fenster entscheidet sich wer die Runde gewonnen hat. <br />
 <br />
-<img src="./bilder/menu ausgewählt.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
-<img src="./bilder/menu auswahl 2.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
-<img src="./bilder/menu auswahl 3.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
-<img src="./bilder/menu auswahl 4.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
+<img src="./bilder/MENÜ AUSWAHL3.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
+<img src="./bilder/MENÜ AUSWAHL NEU2.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
+<img src="./bilder/MENÜ AUS4.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
+<img src="./bilder/MENÜ AUSWAHL NEU.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
 <br />
 <br />
 <br />
@@ -241,8 +241,8 @@ Mit dem Betätigen des <b> 'Start' </b> Buttons beginnt das Spiel mit den vom Sp
 <br />
 Im Spiel wählt man zwischen den Elementen und klickt auf das zugehörige Button. <br />
 <br />
-<img src="./bilder/rock paper scissors.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
-<img src="./bilder/rock paper scissors lizard spock.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
+<img src="./bilder/normal möglichkeit.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
+<img src="./bilder/wählen sie eine möglichkeit aus best of 5 spock echse.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
 <br />
 <br />
 <br />
@@ -268,8 +268,8 @@ Nach Rundenende können zwei folgende Szenarien geschehen: <br />
 <br />
 <b> 2.) 'Du hast das Spiel verloren' </b> , wenn der Spieler verloren hat. <br />
 <br />
-<img src="./bilder/spiel gewonnen.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
-<img src="./bilder/spiel verloren.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
+<img src="./bilder/spiel gewonnenspock echse.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
+<img src="./bilder/DU HAST DAS SPIEL VERLOREN beST OF 3.jpg" width="500" height="300" border="0" alt="Schere Papier" style="margin:5px" align="left"> 
 <br />
 <br />
 <br />
